DFR-470: Fortify setup (#108)
* DFR-70: Fortify setup

* DFR-70: Fix/Suppress vulnerabilities

* DFR-470: Fix security scan

* DFR-470: Fix jakarta dependency

* DFR-470: Fix charts version

* DFR-470: Fix fortify for gradle

* DFR-470: Fix fortify for securityscan